--- a/index.html
+++ b/index.html
@@ -149,33 +149,17 @@ Is give may shall likeness made yielding spirit a itself together created after 
                     Creeping for female light years that lesser can't evening heaven isn't bearing tree
                   </p>
                       </div>
-
-
+                        <div>    
                       <h5>QUALITY WORK
                         <br/>
                         RECENTLY DONE PROJECT
                       </h5>
-
-                      <div class="d-flex mt-120">
-                      <ul>
-                        <li>
-                          <a href="/"> ALL</a>
-                        </li>
-                        <li>
-                          <a href="/"> POPULAR</a>
-                        </li>
-                        <li>
-                          <a href="/"> LATEST</a>
-                        </li>
-                        <li>
-                          <a href="/"> FOLLOWING</a>
-                        </li>
-                        <li>
-                          <a href="/"> UPCOMING</a>
-                        </li>
-                      </ul>
-                    </div> 
-
- 
+                    </div>   
+                  <div class="d-block">
+                    <ul>
+                      <li>hi</li>
+                    </ul>
+                  </div>
+               
 </body>
 </html>
