--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <a href="/" class="btn btn-branding mr-2"> Hire Me</a>
     <a href="/" class="btn btn-primary"> Get CV</a> </div>
   <div class="col-sm-6">
-    <img src="/src/woman" alt="">
+    <img src="/src/woman" alt="" class="picture">
   </div>
 <div class="col-sm-6">
 <img src="/src/about-us.png" alt="" class="img-fluid about-us">
@@ -113,39 +113,39 @@ Is give may shall likeness made yielding spirit a itself together created after 
   is in beast beginning signs open god you're gathering ithe
 </p>
 <div class="container-design ">
-  <div class="row">
+  <div class="row justify-content-between">
     <div class="col-md-3 design">
-      <img src="/src/wp.png" alt="" class="img-fluid">
+      <img src="/src/wp.png" alt="" class="img-fluid mt-5">
 <h4>
   WP DEVELOPING
 </h4>
-<p>
+<p class="text-muted">
   Creeping for female light years that lesser can't evening heaven isn't bearing tree
 </p>
     </div>
     <div class="col-md-3 design">
-      <img src="/src/ux.png" alt="" class="img-fluid ">
+      <img src="/src/ux.png" alt="" class="img-fluid mt-5">
       <h4>
         UX/UI DESIGN
       </h4>
-      <p>
+      <p class="text-muted">
         Creeping for female light years that lesser can't evening heaven isn't bearing tree      </p>
           </div>
           <div class="col-md-3 design">
-            <img src="/src/web.png" alt="" class="img-fluid">
+            <img src="/src/web.png" alt="" class="img-fluid mt-5">
             <h4>
               WEB DESIGN
             </h4>
-            <p>
+            <p class="text-muted">
               Creeping for female light years that lesser can't evening heaven isn't bearing tree
             </p>
                 </div>
                 <div class="col-md-3 design">
-                  <img src="/src/seo.png" alt="" class="img-fluid">
+                  <img src="/src/seo.png" alt="" class="img-fluid mt-5">
                   <h4>
                     SEO OPTIMIZE
                   </h4>
-                  <p>
+                  <p class="text-muted">
                     Creeping for female light years that lesser can't evening heaven isn't bearing tree
                   </p>
                       </div>
@@ -155,10 +155,109 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         RECENTLY DONE PROJECT
                       </h5>
                     </div>   
-                  <div class="d-block">
+                  <div class="">
                     <ul>
-                      <li>hi</li>
+                      <li>
+                        <a href=""> ALL</a>
+                      </li>
+                      <li>
+                        <a href=""> POPULAR</a>
+                      </li>
+                      <li>
+                        <a href=""> LATEST</a>
+                      </li>
+                      <li>
+                        <a href=""> FOLLOWINGS</a>
+                      </li>
+                      <li>
+                        <a href="">UPCOMING</a>
+                      </li>
                     </ul>
+                  </div>
+                  <div class="container">
+                    <dv class="row d-flex">
+                      <div class="col-sm-4  justify-content-between">
+                        <img src="/src/p1.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4">
+                        <img src="/src/p2.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4">
+                        <img src="/src/p3.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4">
+                        <img src="/src/p4.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4 mt-5">
+                        <img src="/src/p5.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4">
+                        <img src="/src/p6.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4 minimal">
+                        <img src="/src/p7.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4">
+                        <img src="/src/p8.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4">
+                        <img src="/src/p9.jpg" alt="">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                    </dv>
                   </div>
                
 </body>
