--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         RECENTLY DONE PROJECT
                       </h5>
                     </div>   
-                  <div class="">
+                 <div>
                     <ul>
-                      <li>
+                      <li class="active">
                         <a href=""> ALL</a>
                       </li>
                       <li>
@@ -175,9 +175,9 @@ Is give may shall likeness made yielding spirit a itself together created after 
                     </ul>
                   </div>
                   <div class="container">
-                    <dv class="row d-flex">
-                      <div class="col-sm-4  justify-content-between">
-                        <img src="/src/p1.jpg" alt="">
+                    <dv class="row d-flex justify-content-center">
+                      <div class="col-sm-4">
+                        <img src="/src/p1.jpg" alt="" class="picture">
                         <h6>
                           MINIMAL DESIGN
                         </h6>
@@ -186,7 +186,16 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p2.jpg" alt="">
+                        <img src="/src/p2.jpg" alt="" class="picture2">
+                        <h6>
+                          MINIMAL DESIGN
+                        </h6>
+                        <p>
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4 ">
+                        <img src="/src/p3.jpg" alt="" class="right-pic">
                         <h6>
                           MINIMAL DESIGN
                         </h6>
@@ -195,16 +204,7 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p3.jpg" alt="">
-                        <h6>
-                          MINIMAL DESIGN
-                        </h6>
-                        <p>
-                          Animated, portfolio
-                        </p>
-                      </div>
-                      <div class="col-sm-4">
-                        <img src="/src/p4.jpg" alt="">
+                        <img src="/src/p4.jpg" alt="" class="picture">
                         <h6>
                           MINIMAL DESIGN
                         </h6>
@@ -222,7 +222,7 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p6.jpg" alt="">
+                        <img src="/src/p6.jpg" alt="" class="right-pic">
                         <h6>
                           MINIMAL DESIGN
                         </h6>
@@ -230,8 +230,8 @@ Is give may shall likeness made yielding spirit a itself together created after 
                           Animated, portfolio
                         </p>
                       </div>
-                      <div class="col-sm-4 minimal">
-                        <img src="/src/p7.jpg" alt="">
+                      <div class="col-sm-4">
+                        <img src="/src/p7.jpg" alt="" class="picture">
                         <h6>
                           MINIMAL DESIGN
                         </h6>
@@ -249,7 +249,7 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p9.jpg" alt="">
+                        <img src="/src/p9.jpg" alt="" class="right-pic">
                         <h6>
                           MINIMAL DESIGN
                         </h6>
