--- a/index.html
+++ b/index.html
@@ -175,85 +175,85 @@ Is give may shall likeness made yielding spirit a itself together created after 
                     </ul>
                   </div>
                   <div class="container">
-                    <dv class="row d-flex justify-content-center">
-                      <div class="col-sm-4">
-                        <img src="/src/p1.jpg" alt="" class="picture">
+                    <dv class="row justify-content-between">
+                      <div class="col-sm-4 picture">
+                        <img src="/src/p1.jpg" alt="" >
                         <h6>
                           MINIMAL DESIGN
                         </h6>
-                        <p>
+                        <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
                       <div class="col-sm-4">
                         <img src="/src/p2.jpg" alt="" class="picture2">
                         <h6>
-                          MINIMAL DESIGN
+                        PAINT WALL
                         </h6>
-                        <p>
+                        <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
                       <div class="col-sm-4 ">
                         <img src="/src/p3.jpg" alt="" class="right-pic">
                         <h6>
-                          MINIMAL DESIGN
+                        FEMALE LIGHT
                         </h6>
-                        <p>
+                        <p class="text-muted">
+                          Animated, portfolio
+                        </p>
+                      </div>
+                      <div class="col-sm-4 picture">
+                        <img src="/src/p4.jpg" alt="">
+                        <h6>
+                          FOURTH AIR
+                        </h6>
+                        <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p4.jpg" alt="" class="picture">
+                        <img src="/src/p5.jpg" alt="" class="mt-10">
                         <h6>
-                          MINIMAL DESIGN
+                          MULTIPLY FOWL
                         </h6>
-                        <p>
-                          Animated, portfolio
-                        </p>
-                      </div>
-                      <div class="col-sm-4 mt-5">
-                        <img src="/src/p5.jpg" alt="">
-                        <h6>
-                          MINIMAL DESIGN
-                        </h6>
-                        <p>
+                       <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
                       <div class="col-sm-4">
                         <img src="/src/p6.jpg" alt="" class="right-pic">
                         <h6>
-                          MINIMAL DESIGN
+                         TOGETHER SIGN
                         </h6>
-                        <p>
+                        <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
-                      <div class="col-sm-4">
-                        <img src="/src/p7.jpg" alt="" class="picture">
+                      <div class="col-sm-4 picture">
+                        <img src="/src/p7.jpg" alt="" >
                         <h6>
-                          MINIMAL DESIGN
+                          GREEN HEAVEN
                         </h6>
-                        <p>
+                        <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
                       <div class="col-sm-4">
                         <img src="/src/p8.jpg" alt="">
                         <h6>
-                          MINIMAL DESIGN
+                          FLY MALE
                         </h6>
-                        <p>
+                        <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
                       <div class="col-sm-4">
                         <img src="/src/p9.jpg" alt="" class="right-pic">
                         <h6>
-                          MINIMAL DESIGN
+                          SEASON FACE
                         </h6>
-                        <p>
+                        <p class="text-muted">
                           Animated, portfolio
                         </p>
                       </div>
