--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p5.jpg" alt="" class="mt-10">
+                        <img src="/src/p5.jpg" alt="" class="picture5">
                         <h6>
                           MULTIPLY FOWL
                         </h6>
@@ -240,7 +240,7 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p8.jpg" alt="">
+                        <img src="/src/p8.jpg" alt=""  class="picture8">
                         <h6>
                           FLY MALE
                         </h6>
@@ -249,7 +249,7 @@ Is give may shall likeness made yielding spirit a itself together created after 
                         </p>
                       </div>
                       <div class="col-sm-4">
-                        <img src="/src/p9.jpg" alt="" class="right-pic">
+                        <img src="/src/p9.jpg" alt="" class="right-pic" id="picture9">
                         <h6>
                           SEASON FACE
                         </h6>
@@ -259,6 +259,12 @@ Is give may shall likeness made yielding spirit a itself together created after 
                       </div>
                     </dv>
                   </div>
+               
+           <footer>
+             <p>
+               FOLLOW ME
+             </p>
+           </footer> 
                
 </body>
 </html>
